--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,6 +13,7 @@
     padding: 0;
     font-family: inherit;
     line-height: 1.3;
+    color: inherit;
 }
 
 html,
@@ -32,6 +33,8 @@ html {
 body {
     min-height: 100%;
     overflow-x: hidden;
+    color: white;
+    background: black;
 }
 
 p,
@@ -77,13 +80,4 @@ button {
     font-weight: 700;
     letter-spacing: 0.25em;
     text-transform: uppercase;
-}
-@media (prefers-color-scheme: dark) {
-    html {
-        color-scheme: dark;
-    }
-    body {
-        color: white;
-        background: black;
-    }
 }
