--- a/styles/Cta.module.scss
+++ b/styles/Cta.module.scss
@@ -1,232 +1,65 @@
-.container {
+.cta {
     width: 100%;
     min-height: calc(100vh - var(--navbar-height));
-    background: hsl(204, 100%, 98%);
-
+    background: #00090f;
+    background: url("/cta-bg.png") no-repeat center;
+    background-size: cover;
+    color: #f9f9f9;
     position: relative;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-size: 1em;
+    position: relative;
+    z-index: 1;
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        z-index: -1;
+    }
 }
 
-.triangle {
-    margin-inline: auto;
-    width: 30%;
-    max-width: 170px;
-    /* position: absolute;
-    top: -5%;
-    left: 50%;
-    transform: translateX(-50%); */
+.container {
+    width: 90%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
 }
 
 .title {
-    text-align: center;
-    color: #000;
-
     font-weight: 950;
     font-size: 4.25em;
     margin-top: auto;
-    padding: 1em 0 0.75em;
-    line-height: 1.1;
+    line-height: 1.15em;
+    letter-spacing: -0.04em;
     transition: font-size 300ms ease-out, padding 500ms ease-out;
-
-    @media only screen and (min-width: 810px) {
-        font-size: 6em;
-    }
-    @media only screen and (min-width: 1200px) {
-        padding: 0;
-        font-size: 7em;
-    }
 }
 
-.btnContainer {
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
-    margin-top: auto;
-    height: calc(100vh / 3);
-    min-height: 280px;
-    padding-top: 2em;
-    -webkit-filter: drop-shadow(0px 16px 40px rgba(0, 0, 0, 0.2));
+.ctaParagraph {
+    // margin-top: 2.5em;
+    line-height: 1.5em;
 }
 
 .ctaBtn {
-    padding: 0.8em 1.5em;
-    font-size: 1em;
-    font-weight: 700;
+    border-radius: 999px;
+    padding: 1em 2em;
+    font-weight: 500;
+    letter-spacing: 0.1em;
+    background: #004a80;
+    background: var(--primary-gradient);
     text-transform: uppercase;
-    letter-spacing: 0.25em;
-    background: #0096eb;
-    background: transparent;
-    box-shadow: inset 0 0 0 2px white;
-    display: block;
-    margin-inline: auto;
-    transition: letter-spacing 500ms ease-in-out, padding 500ms ease-in-out;
-    @media only screen and (min-width: 425px) {
-        padding: 1em 2em;
-    }
-    @media only screen and (min-width: 768px) {
-        letter-spacing: 0.35em;
-    }
+    box-shadow: 0 4px 40px rgba(0, 0, 0, 0.15);
+    font-size: 1.25em;
+    border-radius: 999px;
+    line-height: 1.5em;
+    // margin-top: 0.75em;
 }
-
-.btnBgBox {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    z-index: -1;
-    transform: translateX(-50%);
-    width: 90%;
-    max-width: 500px;
-    height: 100%;
-    background: linear-gradient(
-        180deg,
-        hsl(200, 80%, 46%) -30%,
-        hsl(203, 90%, 36%),
-        hsl(205, 100%, 25%) 50%
-    );
-    border-radius: 2em 2em 0 0;
-
-    transition: border-radius 500ms ease-in-out, max-width 500ms ease-out;
-    @media only screen and (min-width: 555px) {
-        border-radius: 3.75em 3.75em 0 0;
-    }
-    @media only screen and (min-width: 1025px) {
-        max-width: 700px;
-    }
-}
-
-.line {
-    &__upperLeft,
-    &__lowerRight,
-    &__upperLeftOff,
-    &__lowerRightOff {
-        --offset-color: hsl(var(--primary-color-hsl));
-        --inset-color: #fff;
-        height: 8px;
-        width: 30%;
-        background: var(--inset-color);
-        position: absolute;
-        bottom: 0;
-        transition: margin 500ms ease-in-out;
-    }
-
-    &__upperLeftOff,
-    &__lowerRightOff {
-        width: 50vw;
-        background: var(--offset-color);
-    }
-    &__upperLeft,
-    &__upperLeftOff {
-        margin-bottom: 5.75em;
-    }
-
-    &__lowerRight,
-    &__lowerRightOff {
-        margin-bottom: 2.5em;
-    }
-
-    &__upperLeft {
-        left: 0;
-    }
-    &__upperLeftOff {
-        right: 100%;
-    }
-
-    &__lowerRight {
-        right: 0;
-    }
-    &__lowerRightOff {
-        left: 100%;
-    }
-    @media only screen and (min-width: 555px) {
-        &__upperLeft,
-        &__upperLeftOff {
-            margin-bottom: 8em;
-        }
-
-        &__lowerRight,
-        &__lowerRightOff {
-            margin-bottom: 3em;
-        }
-    }
-}
-
-// .line {
-//     &__upperLeft,
-//     &__lowerRight {
-//         --side-offset: 10%;
-//         --offset-color: #000;
-//         height: 8px;
-//         position: absolute;
-//         bottom: 0;
-//         width: calc(50% - var(--side-offset));
-//         background: #000;
-//     }
-//     &__upperLeft {
-//         left: 0;
-//         margin-bottom: 8em;
-//         background: linear-gradient(
-//             to left,
-//             var(--offset-color) var(--side-offset),
-//             red var(--side-offset)
-//         );
-//     }
-//     &__lowerRight {
-//         right: 0;
-//         margin-bottom: 3em;
-//     }
-// }
-
-// .line {
-//     &__upperLeft,
-//     &__lowerRight {
-//         --side-offset: 35%;
-//         --gradient-offset: calc(var(--side-offset) - 5%);
-//         --offset-color: #000;
-//         position: absolute;
-//         bottom: 0;
-//         height: 8px;
-//         width: 100%;
-//     }
-//     &__upperLeft {
-//         left: 0;
-//         margin-bottom: 8em;
-//         background: linear-gradient(
-//             to left,
-//             var(--offset-color) var(--gradient-offset),
-//             red var(--gradient-offset)
-//         );
-//         transform: translateX(calc(-100% + var(--side-offset)));
-//     }
-//     &__lowerRight {
-//         margin-bottom: 3em;
-//         background: linear-gradient(
-//             to right,
-//             var(--offset-color) var(--gradient-offset),
-//             red var(--gradient-offset)
-//         );
-//         transform: translateX(calc(100% - var(--side-offset)));
-//     }
-
-//     @media only screen and (min-width: 795px) {
-//         &__upperLeft,
-//         &__lowerRight {
-//             --side-offset: 10%;
-//             --gradient-offset: calc(50% - var(--side-offset));
-//         }
-//         &__upperLeft {
-//             left: 50%;
-//             transform: translateX(calc(-100% - var(--side-offset)));
-//             background: linear-gradient(
-//                 to left,
-//                 var(--offset-color) var(--gradient-offset),
-//                 red var(--gradient-offset)
-//             );
-//         }
-//         &__lowerRight {
-//             right: 50%;
-//             transform: translateX(100%);
-//         }
-//     }
-// }
