--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,19 +1,7 @@
 .footer {
     width: 100%;
-    background: #004a80;
-    position: relative;
-    z-index: 3;
-    // background: var(--primary-gradient);
-    &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        background: linear-gradient(to bottom, transparent, hsl(200, 80%, 30%));
-    }
+    padding: 3.75rem 0 2rem;
+    background: #00090f;
 }
 .container {
     display: flex;
@@ -21,60 +9,32 @@
     width: 90%;
     max-width: 1440px;
     margin: 0 auto;
-    padding: 3.75rem 0 2rem;
-
-    & > * {
-        margin-bottom: 1.5rem;
-    }
 }
 
-.logo,
-.logoInMiddle {
-    width: 90%;
-    max-width: 280px;
-    align-self: center;
+.content {
+    display: flex;
+    // flex-direction: column;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 3em;
 }
 
-.logoInMiddle {
-    display: none;
-    opacity: 0;
-}
-
-.inner {
+.contactList,
+.companyList {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
 }
 
-.leftList {
-    &__outer {
-        display: flex;
-        flex-direction: column;
-    }
-
-    &__inner {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        opacity: 0.8;
-    }
+.contactLinks,
+.companyLinks {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75em;
+    opacity: 0.8;
 }
 
-.rightList {
-    &__outer {
-        display: flex;
-        flex-direction: column;
-    }
-
-    &__inner {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        opacity: 0.8;
-    }
-}
 .rowWithIconOnLeft {
     display: flex;
     align-items: flex-end;
@@ -90,80 +50,57 @@
 .listTitle {
     font-size: 28px;
     font-weight: 700;
-    margin-bottom: 4px;
+    margin-bottom: 0.25em;
+    line-height: 1.3em;
 }
 
-.bottomRow {
+.socials {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    gap: 1.5rem;
-    margin-top: 1rem;
+    justify-content: space-between;
+    height: 10em;
+    order: 2;
+    @media only screen and (min-width: 770px) {
+        order: initial;
+        text-align: center;
+        align-items: center;
+    }
 }
 
+.socialTitle {
+    font-size: 1.75em;
+    font-weight: 700;
+    line-height: 1.3em;
+    margin-bottom: 0.5em;
+}
 .socialMenu {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 1em;
+    @media only screen and (min-width: 770px) {
+        justify-content: center;
+    }
 }
 
 .socialLink {
-    width: 32px;
-    height: 32px;
-    img {
-        filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.15));
-        -webkit-filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.15));
+    width: 2.25em;
+    height: 2.25em;
+    & picture {
+        width: 100%;
+        height: 100%;
     }
+}
+
+.logo {
+    max-width: 250px;
 }
 
 .copy {
-    font-size: 0.8em;
+    margin-top: 1.5em;
+    font-size: 1em;
     opacity: 0.6;
-}
-
-@media only screen and (min-width: 668px) {
-    .inner {
-        flex-direction: row;
-        justify-content: space-around;
-        position: relative;
-        width: 90%;
-        margin-inline: auto;
-
-        & > * {
-            /* flex: 1; */
-            /* margin-inline: auto; */
-        }
-    }
-    .leftList__outer {
-        margin-right: auto;
-    }
-    .rightList__outer {
-        margin-left: auto;
-    }
-    .bottomRow {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    .copy {
-        font-size: 1em;
-    }
-}
-
-@media only screen and (min-width: 1024px) {
-    .logo {
-        display: none;
-        opacity: 0;
-    }
-
-    .logoInMiddle {
-        display: block;
-        opacity: 1;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        max-width: 250px;
-    }
+    text-align: center;
+    position: relative;
+    padding-top: 1em;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
