--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -1,13 +1,17 @@
 .hero {
-    background: url("/hero-bg.png") no-repeat top;
+    background: #00090f;
+    background: url("/hero-bg.png") no-repeat center;
+    background-size: cover;
     width: 100%;
     position: relative;
+    top: 0;
     z-index: 1;
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 4em 0;
-    margin-top: var(--navbar-height);
-    min-height: calc(100vh - var(--navbar-height));
+    // padding-top: var(--navbar-height);
+    min-height: max(600px, 100vh);
     transition: padding 500ms ease-in-out;
     &::before {
         content: "";
@@ -20,82 +24,84 @@
         opacity: 0.5;
         z-index: -1;
     }
-
-    @media only screen and (min-width: 426px) {
-        // padding-top: 6em;
-    }
 }
 
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90%;
+    // width: 95%;
     font-size: 1rem;
-}
-
-.titleImg {
-    display: flex;
-    justify-content: center;
-    width: 40%;
-    margin-bottom: 1.25em;
-    transition: margin-bottom 500ms ease-in-out;
-    & img {
-        max-height: 150px;
-    }
-}
-
-.textGroup {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 590px;
     text-align: center;
-    margin-bottom: 1.5em;
+}
+
+.title {
+    font-weight: 800;
+    font-size: 3.5em;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    line-height: 1.15em;
+    transition: font-size 500ms ease-out, letter-spacing 500ms ease-out;
+    @media only screen and (min-width: 600px) {
+        font-size: clamp(3.5em, 8vw, 6em);
+        letter-spacing: clamp(0.1em, 0.35em, 0.6em);
+    }
 }
 
 .slogan {
     text-transform: uppercase;
-    letter-spacing: 0.25em;
-    font-size: 1.25em;
-    font-weight: 800;
+    letter-spacing: 0.1em;
+    font-size: 1.5em;
+    font-weight: 700;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     opacity: 0.8;
-    line-height: 1.1;
+    line-height: 1.2em;
+    margin-top: 0.25em;
+    transition: font-size 500ms ease-out, letter-spacing 500ms ease-out;
+
+    @media only screen and (min-width: 1024px) {
+        font-size: 1.75em;
+    }
 }
 
 .para {
     width: 90%;
     margin-top: 0.5em;
-    opacity: 0.6;
-    font-size: 0.9em;
+    opacity: 0.8;
+    font-size: 1rem;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+    margin-top: 1em;
+    max-width: 580px;
 }
 
 .btnGroup {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 1.125em;
-    font-weight: 700;
-    font-size: 1em;
     gap: 1.5em;
-    letter-spacing: 0.25em;
     transition: gap 500ms ease-in-out, letter-spacing 500ms ease-in-out;
+    margin-top: 1.5em;
+    line-height: 1.5em;
     & > * {
         text-transform: uppercase;
-        letter-spacing: inherit;
         box-shadow: 0 4px 40px rgba(0, 0, 0, 0.15);
+        border-radius: 999px;
+        padding: 1em 2em;
+        font-weight: 500;
+        letter-spacing: 0.1em;
+    }
+    @media only screen and (min-width: 600px) {
+        flex-direction: row;
+        gap: 3em;
     }
 }
 
 .cta {
-    padding: 1em 2em;
     background: #004a80;
     background: var(--primary-gradient);
-    font-weight: 700;
-    font-size: 1em;
 
+    font-size: 1em;
+    border-radius: 999px;
     // transition: box-shadow 300ms ease-in-out;
     &:hover {
         // transform: scale(1.01);
@@ -103,10 +109,7 @@
 }
 
 .secondaryBtn {
-    font-size: 0.9em;
-    --border-width: 2px;
-    // padding: calc(1em - var(--border-width)) calc(2em - var(--border-width));
-    padding: 1em 2em;
+    --border-width: 1px;
     background: #000;
     background: transparent;
     border: var(--border-width) solid white;
@@ -114,35 +117,5 @@
     transition: background 300ms ease-in-out, transform 300ms ease-in-out;
     &:hover {
         background: hsla(0, 0%, 100%, 0.15);
-    }
-}
-
-@media only screen and (min-width: 740px) {
-    .hero {
-        // align-items: center;
-    }
-    .titleImg {
-        width: 100%;
-        margin-bottom: 1.5em;
-        & img {
-            width: 90%;
-            max-width: 100%;
-        }
-    }
-
-    .container {
-        font-size: 1.125em;
-        justify-content: center;
-    }
-    .btnGroup {
-        flex-direction: row;
-        gap: 2.5em;
-        letter-spacing: 0.3em;
-    }
-}
-
-@media only screen and (min-width: 1000px) {
-    .titleImg {
-        max-width: 900px;
     }
 }
