--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -1,111 +1,90 @@
 .navbar {
     width: 100%;
-    background: #004a80;
-    background: var(--primary-gradient);
-    position: fixed;
+    background: hsla(204, 100%, 3%, 0.6);
+    background: linear-gradient(
+        180deg,
+        #00090f 0%,
+        rgba(0, 9, 15, 0.859375) 41.67%,
+        rgba(0, 9, 15, 0) 100%
+    );
+    position: absolute;
     top: 0;
     z-index: 999;
-    box-shadow: 0 4px 40px rgba(0, 0, 0, 0.25);
     padding: 1.75em 0;
     // transition: padding 500ms ease-in-out;
 }
 .container {
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
     align-items: center;
+
     gap: 1.75em;
     width: 90%;
     max-width: 1340px;
     margin: 0 auto;
+    z-index: 1;
 }
 
 .logo {
     max-width: 200px;
     object-fit: contain;
-    // @media only screen and (max-height: 450px) {
-    //     display: none;
-    //     opacity: 0;
-    // }
 }
 
-.menu {
-    list-style: none;
+.menuIcon {
+    margin-left: auto;
+    cursor: pointer;
+    user-select: none;
+}
 
+.menuMobile,
+.menuDesktop {
+    list-style: none;
     display: flex;
-    justify-content: center;
-    gap: 2.25em;
+    align-items: center;
+    gap: 1.5em;
     font-size: 1em;
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 0.2em;
-    & > li {
-        position: relative;
-        text-align: center;
+}
 
-        & > a {
-            display: block;
-            opacity: 0.7;
-            transition: opacity 400ms ease-out, letter-spacing 400ms ease-out;
+.menuMobile {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    // transform: translateX(-50%);
+    flex-direction: column;
+    justify-content: center;
 
-            &::after {
-                content: "";
-                position: absolute;
-                bottom: -3px;
-                left: 50%;
-                transform: translateX(-50%);
-                min-width: 10px;
-                width: 70%;
-                height: 2px;
-                border-radius: 999px;
-                background: #e0e0e0;
-                transition: width 400ms ease-out;
-                opacity: 0.6;
-            }
-            &:hover {
-                opacity: 1;
-                letter-spacing: 0.25em;
-                &::after {
-                    width: 90%;
-                    opacity: 0.8;
-                }
-            }
-        }
-    }
+    width: 100%;
+    padding-top: var(--navbar-height);
+    background: linear-gradient(
+        180deg,
+        rgba(0, 9, 15, 0.859375) 0%,
+        rgba(0, 9, 15, 0.5) 100%
+    );
+    // backdrop-filter: blur(16px);
+    padding-bottom: 2.5em;
+    z-index: -1;
+    transition: transform 500ms ease-out, opacity 100ms linear,
+        backdrop-filter 500ms linear;
+}
+
+.menuDesktop {
+    margin-left: auto;
 }
 
 .cta {
-    padding: 12px 28px;
+    --border-width: 1px;
+    padding: 12px 32px;
     text-transform: uppercase;
-    font-size: 0.9em;
-    font-weight: 700;
-    letter-spacing: 4px;
-    background: #fff;
-    color: #004a80;
-    line-height: 1;
+    font-size: 1em;
+    letter-spacing: 0.1em;
+    line-height: 1.5em;
     max-width: 280px;
-    display: none;
-    opacity: 0;
-}
-
-@media only screen and (min-width: 660px) {
-    .container {
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        gap: 1.25em;
-    }
-}
-
-@media only screen and (min-width: 1024px) {
-    .navbar {
-        // it stops the sudden change in the size of navbar when the cta button is added
-        padding: 1.4375em 0;
-    }
-    .cta {
-        display: block;
-        opacity: 1;
-    }
-    .menu {
-        font-size: 1.125em;
-    }
+    background: #000;
+    background: transparent;
+    border: var(--border-width) solid #e0e0e0;
+    color: #e0e0e0;
+    border-radius: 999px;
 }
