--- a/styles/Services.module.scss
+++ b/styles/Services.module.scss
@@ -1,7 +1,7 @@
 .services {
-    background: #fff;
-    color: #000;
-    padding: 3.5em 0;
+    background: #00090f;
+    color: #f9f9f9;
+    padding: 6.25em 0 7.5em;
 }
 
 .container {
@@ -12,6 +12,9 @@
 
 .heading {
     text-align: center;
+    & > * + * {
+        margin-top: 0.25em;
+    }
 }
 
 .rowsContainer {
@@ -20,8 +23,8 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 4em;
-    gap: 4em;
+    margin-top: 3.75em;
+    gap: 3.75em;
     text-align: center;
 }
 
@@ -40,6 +43,9 @@
         flex-direction: column;
         // justify-content: center;
         align-items: center;
+        & > * + * {
+            margin-top: 0.5em;
+        }
     }
 
     &Img {
@@ -59,7 +65,6 @@
     }
     &Desc {
         font-size: 1em;
-        margin-top: 0.25em;
 
         opacity: 0.8;
         max-width: 400px;
