--- a/styles/Work.module.scss
+++ b/styles/Work.module.scss
@@ -1,11 +1,11 @@
 .work {
-    padding: 3em 0 6em;
-    background: #004a80;
-    background: radial-gradient(50% 50% at 50% 50%, #0096eb 0%, #004a80 100%);
+    padding: 6em 0;
+    background: #00090f;
+    background: radial-gradient(50% 50% at 50% 50%, #000f1a 0%, #00090f 100%);
 }
 
 .container {
-    width: 90%;
+    width: 95%;
     margin-inline: auto;
     max-width: 1200px;
 }
@@ -20,17 +20,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 0.8em;
-    gap: 1.25em;
-    margin-top: 2em;
-    font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    gap: 1em;
+    margin-top: 2.5em;
+    font-weight: 400;
 }
 
 .filterButton,
 .filterButtonActive {
-    line-height: 1;
-    padding: 10px 12px;
-    font-size: 1em;
+    letter-spacing: 0.05em;
+    line-height: 1.5em;
+    padding: 8px 12px;
+    border-radius: 99px;
+    font-size: 0.825em;
 }
 
 .filterButton {
@@ -48,7 +49,7 @@
 }
 
 .portfolio {
-    margin-top: 2em;
+    margin-top: 1.5em;
     display: grid;
     place-content: center;
     grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
@@ -87,7 +88,7 @@
     }
     &Details {
         width: 100%;
-        padding: 0 var(--sidePadding) 1em;
+        padding: 0 var(--sidePadding) 1.25em;
         position: absolute;
         bottom: var(--linkGroupHeight);
         left: 0;
@@ -100,13 +101,14 @@
         );
     }
     &Title {
-        font-size: 1.25em;
-        // font-weight: 700;
-        line-height: 1.1;
+        font-size: 1.5em;
+        font-weight: 700;
+        line-height: 1.15;
     }
     &Desc {
-        margin-top: 6px;
-        font-weight: 300;
+        margin-top: 4px;
+        font-weight: 400;
+        line-height: 1.5em;
     }
     &LinkGroup {
         background: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.7), #000);
@@ -119,7 +121,7 @@
         padding: 0 var(--sidePadding) 2em;
         & > a {
             margin-right: auto;
-            line-height: 1;
+            line-height: 1.15;
             border-bottom: 1px solid white;
         }
     }
@@ -131,15 +133,8 @@
     }
 }
 
-// @media only screen and (min-width: 682px) {
-//     .portfolio {
-//         grid-template-columns: repeat(auto-fit, minmax(300px, calc(100% / 3)));
-//     }
-// }
-
-@media only screen and (min-width: 1015px) {
+@media only screen and (min-width: 1024px) {
     .filters {
-        justify-content: flex-end;
         font-size: 1em;
     }
     .portfolio {
@@ -148,27 +143,4 @@
     .portfolioCard {
         --sidePadding: 2em;
     }
-    .work {
-        &Details {
-            padding-bottom: 1.25em;
-        }
-        // &LinkGroup {
-        //     // gap: 2em;
-        //     // justify-content: space-around;
-
-        //     // & > a {
-        //     //     margin-left: auto;
-        //     // }
-        // }
-    }
 }
-
-// .fadeOut {
-//     max-width: 0;
-//     opacity: 0;
-//     // display: none;
-//     transition: max-width 500ms ease-out, opacity 500ms ease-out;
-// }
-
-// .fadeIn {
-// }
