--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,10 +1,11 @@
 :root {
     --primary-color-hsl: 205, 100%, 25%;
-    --primary-gradient: linear-gradient(135deg, hsl(200, 80%, 30%), #004a80);
+    --primary-gradient: linear-gradient(90deg, #004a80 0%, #003c69 100%);
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 *,
 *::before,
 *::after {
@@ -12,34 +13,36 @@
     margin: 0;
     padding: 0;
     font-family: inherit;
-    line-height: 1.3;
+    font-weight: inherit;
+    line-height: inherit;
     color: inherit;
 }
 
 html,
 body {
-    font-family: Raleway, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-        Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-        sans-serif;
+    font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Ubuntu,
+        Helvetica Neue, sans-serif;
     font-variant-numeric: lining-nums;
 }
 
 html {
     height: 100%;
     scroll-behavior: smooth;
-    scroll-padding-top: var(--navbar-height);
+    // scroll-padding-top: var(--navbar-height);
 }
 
 body {
     min-height: 100%;
     overflow-x: hidden;
     color: white;
-    background: black;
+    background: #f5f5f7;
 }
 
+button,
 p,
 a {
-    font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Ubuntu, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -71,13 +74,15 @@ button {
 }
 
 .section-title {
-    font-size: 3em;
+    font-size: 3.5em;
     font-weight: 800;
-    text-align: center;
 }
 .section-subtitle {
-    color: #353535;
-    font-weight: 700;
-    letter-spacing: 0.25em;
+    font-size: 1.25em;
+    font-weight: 500;
+    letter-spacing: 0.1em;
     text-transform: uppercase;
+    opacity: 0.6;
+    font-family: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Ubuntu, Helvetica Neue, sans-serif;
 }
