--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -1,5 +1,5 @@
 .about {
-    padding: 6.25em 0;
+    padding: calc(6.25em + 5vw) 0;
     background: #00090f;
     background: url("/about-bg.png") no-repeat center;
     color: #f9f9f9;
@@ -39,55 +39,8 @@
     }
 }
 
-.cta {
-    --border-width: 1px;
-    display: block;
-    width: fit-content;
-    padding: 16px 32px;
-    text-transform: uppercase;
-    font-size: 1em;
-    letter-spacing: 0.1em;
-    line-height: 1.5em;
-    max-width: 280px;
-    background: #000;
-    background: transparent;
-    border: var(--border-width) solid #e0e0e0;
-    color: #e0e0e0;
-    border-radius: 999px;
+@media only screen and (min-width: 900px) {
+    .about {
+        padding: 10em 0;
+    }
 }
-
-// @media only screen and (min-width: 768px) {
-//     .about {
-//         padding: 4em 0 8em;
-//     }
-//     .container {
-//         width: 80%;
-//         font-size: 1.25em;
-//     }
-//     .rowsContainer {
-//         text-align: left;
-//         gap: 7em;
-//     }
-//     .row {
-//         flex-direction: row;
-//         & > * {
-//             flex: 50%;
-//         }
-//         &:nth-child(2n + 1) {
-//             .rowImg {
-//                 order: 2;
-//             }
-//         }
-//         &Img {
-//             width: 80%;
-//             max-width: 100%;
-//             max-height: 200px;
-//         }
-//         &Content {
-//             align-items: flex-start;
-//         }
-//         &Desc {
-//             max-width: 430px;
-//         }
-//     }
-// }
