--- a/styles/Services.module.scss
+++ b/styles/Services.module.scss
@@ -2,6 +2,7 @@
     background: #00090f;
     color: #f9f9f9;
     padding: 6.25em 0 7.5em;
+    transition: padding 500ms ease-in-out, font-size 500ms ease-in-out;
 }
 
 .container {
@@ -73,11 +74,9 @@
 
 @media only screen and (min-width: 768px) {
     .services {
-        padding: 4em 0 7em;
+        padding: 8em 0;
     }
-    .container {
-        font-size: 1.25em;
-    }
+
     .rowsContainer {
         gap: 3em 2em;
         align-items: flex-start;
