gitignore updates to add env local file. Adds nodemailer, react-toastify, removes smtp.js, react-drag-and-drop. Removes file attachment related code, adds form validation and submission(adds validateForm.ts). Navbar and footer menu becomes dynamic using arrays. RENAMES WORK.tsx to PROJECTS.tsx. Adds error messages in input component. Adds a sendemail api using nodemailer to send emails. Renames mail.svg to email.svg. Changes font mixins to fix default text-transform value. Adds normalize css reset for consistent look across browsers. Removes gap between each section in the home page. Makes the contact form more of a step-by-step form rather than a long form. Frontend fixes, improvements and cleanup.

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -4,7 +4,7 @@
     $weight,
     $line-height,
     $letter-spacing,
-    $case: "none"
+    $case: initial
 ) {
     font-size: $size;
     font-family: $family;
