--- a/styles/contact/contact.module.scss
+++ b/styles/contact/contact.module.scss
@@ -7,11 +7,11 @@
         #010c14 0.01%,
         #000f19 100%
     );
+    padding: var(--navbar-height) 0 2em;
 }
 
 .engagingSection {
     position: relative;
-    padding-top: var(--navbar-height);
     transition: max-width 400ms ease-in-out, padding 600ms ease-in-out;
 }
 
@@ -27,9 +27,9 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, calc(-50% + var(--navbar-height) / 2));
+    transform: translate(-50%, -50%);
     @extend %h3;
-    font-size: calc(2.5em + 1vw);
+    font-size: calc(2em + 1.1vw);
     text-align: center;
     width: 80%;
 }
@@ -38,6 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-inline: 1.5em;
 }
 
 @media only screen and (min-width: 700px) {
@@ -56,50 +57,45 @@
                 rgba(0, 0, 0, 0) 100%
             ),
             #000f1a;
+        padding-inline: 1em;
     }
     .container {
-        max-width: 1440px;
         display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1em;
+        max-width: 1080px;
         margin: 0 auto;
-        padding-top: var(--navbar-height);
-        background: linear-gradient(
-                90deg,
-                rgba(0, 0, 0, 0.2) 47.71%,
-                rgba(0, 0, 0, 0) 100%
-            ),
-            #000f1a;
-        min-height: max(100vh, 600px);
+
+        & > * {
+            flex: 1;
+        }
     }
 
     .engagingSection {
-        padding-top: 0;
+        flex: 1;
         width: 100%;
         max-width: 450px;
+        // & > * {
+        //     max-width: 500px;
+        //     margin-inline: auto;
+        // }
     }
 
     .engagingImage {
         height: 100%;
         & img {
-            max-height: none;
+            // aspect-ratio: 0.5;
+            // max-height: none;
+            max-height: 600px;
             height: 100%;
+            border-radius: 9999px;
         }
     }
     .engagingText {
         transform: translate(-50%, -50%);
-        font-size: 4em;
+        font-size: 3em;
     }
     .contactFormContainer {
-        flex: 1;
-        padding: 2em 0;
-    }
-}
-
-@media only screen and (min-width: 1440px) {
-    .container {
-    }
-    .engagingSection {
-        max-width: 600px;
-        // padding-top: 3em;
-        padding-bottom: 3em;
     }
 }
