--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,15 @@
 @use "font" as *;
+@use "reset";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 :root {
+    // --toastify-color-success: #07bc0c;
+    --toastify-color-success: rgb(0, 160, 80) !important;
+    --toastify-color-error: #ed615e !important;
     --primary-color-hsl: 205, 100%, 25%;
     --primary-gradient: linear-gradient(90deg, #004a80 0%, #003c69 100%);
 }
-
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 *,
 *::before,
@@ -19,12 +23,6 @@
     color: inherit;
 }
 
-html,
-body {
-    font-family: $primaryFont;
-    font-variant-numeric: lining-nums;
-}
-
 html {
     height: 100%;
     scroll-behavior: smooth;
@@ -32,10 +30,12 @@ html {
 }
 
 body {
+    font-family: $primaryFont;
+    font-variant-numeric: lining-nums;
     min-height: 100%;
     overflow-x: hidden;
     color: white;
-    background: #f5f5f7;
+    background: #00090f;
 }
 
 button,
@@ -49,6 +49,7 @@ a {
     text-decoration: none;
 }
 
+picture,
 img {
     display: block;
     max-width: 100%;
@@ -58,6 +59,7 @@ button {
     cursor: pointer;
     border: none;
     &:disabled {
+        opacity: 0.2;
         cursor: not-allowed;
     }
 }
@@ -91,9 +93,8 @@ button {
     text-decoration: none;
     transition: background 300ms ease-in-out, transform 100ms ease-out;
 
-    &:focus-visible,
-    &:focus-within {
-        transform: scale(0.95);
+    &:focus {
+        outline: 0.2em solid currentColor;
     }
 }
 
