--- a/styles/input.module.scss
+++ b/styles/input.module.scss
@@ -1,20 +1,28 @@
 @use "font" as *;
 
-.inputContainer {
+fieldset.inputContainer {
+    border: none;
     display: flex;
     flex-direction: column;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
     position: relative;
+
+    // &:invalid ~ & {
+    //     display: none;
+    // }
+    &[data-isvalid="false"] ~ & {
+        display: none;
+    }
 }
 
 .label {
-    @extend %p2;
+    font-size: 0.9em;
     position: absolute;
     top: 0em;
     left: 0em;
-    opacity: 0.9;
+    opacity: 0.5;
     width: 100%;
 }
 
@@ -22,18 +30,33 @@
 .textarea {
     @extend %p2;
     height: 100%;
-    background: #000;
     background: transparent;
+    background: none;
     border: none;
-    margin-top: 2em;
-    padding: 0em 0 1em;
+    margin-top: 1.5em;
+    padding: 0em 0 0.75em;
     box-shadow: 0 2px 0 rgba(255, 255, 255, 0.2);
     resize: none;
     &:focus {
         outline: none;
+        box-shadow: 0 2px 0 rgba(255, 255, 255, 0.75);
     }
     &::placeholder {
         color: #fff;
         opacity: 0.2;
     }
+}
+
+.error {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    color: hsl(1, 80%, 65%);
+    font-size: 0.9em;
+    margin-top: 0.75em;
+}
+
+.errorIcon {
+    width: 1.25em;
+    height: 1.25em;
 }
