--- a/styles/Cta.module.scss
+++ b/styles/Cta.module.scss
@@ -1,9 +1,9 @@
 .cta {
     width: 100%;
+    padding: 8em 0;
     min-height: calc(100vh - var(--navbar-height));
     background: #00090f;
-    background: url("/cta-bg.png") no-repeat center;
-    background-size: cover;
+
     color: #f9f9f9;
     position: relative;
     display: flex;
@@ -13,15 +13,23 @@
     font-size: 1em;
     position: relative;
     z-index: 1;
-    &::before {
+    &::before,
+    &::after {
         content: "";
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.8);
         z-index: -1;
+    }
+    &::before {
+        background: url("/static/cta-bg.jpg") no-repeat center;
+        // filter: sepia(180%) hue-rotate(160deg) contrast(120%) saturate(100%);
+        background-size: cover;
+    }
+    &::after {
+        background: hsla(0, 0%, 0%, 0.75);
     }
 }
 
@@ -37,7 +45,7 @@
 
 .title {
     font-weight: 950;
-    font-size: 4.25em;
+    font-size: 4em;
     margin-top: auto;
     line-height: 1.15em;
     letter-spacing: -0.04em;
