--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -1,7 +1,6 @@
 .hero {
     background: #00090f;
-    background: url("/hero-bg.png") no-repeat center;
-    background-size: cover;
+
     width: 100%;
     position: relative;
     top: 0;
@@ -13,16 +12,23 @@
     // padding-top: var(--navbar-height);
     min-height: max(600px, 100vh);
     transition: padding 500ms ease-in-out;
-    &::before {
+    &::before,
+    &::after {
         content: "";
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
         height: 100%;
-        background: #000;
-        opacity: 0.5;
+        width: 100%;
         z-index: -1;
+    }
+    &::before {
+        background: url("/static/hero-bg.jpg") no-repeat center;
+        background-size: cover;
+        filter: sepia(100%) saturate(150%) hue-rotate(170deg) contrast(120%);
+    }
+    &::after {
+        background: hsla(0, 0%, 0%, 0.6);
     }
 }
 
@@ -36,39 +42,42 @@
 }
 
 .title {
-    font-weight: 800;
-    font-size: 3.5em;
-    letter-spacing: 0.1em;
+    font-weight: 900;
+    font-size: 3.25em;
+    letter-spacing: 0.3em;
     text-transform: uppercase;
+    text-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+
     line-height: 1.15em;
     transition: font-size 500ms ease-out, letter-spacing 500ms ease-out;
     @media only screen and (min-width: 600px) {
-        font-size: clamp(3.5em, 8vw, 6em);
-        letter-spacing: clamp(0.1em, 0.35em, 0.6em);
+        font-size: clamp(3.5em, 8vw, 4.5em);
+        letter-spacing: clamp(0.1em, 0.4em, 0.6em);
     }
 }
 
 .slogan {
     text-transform: uppercase;
     letter-spacing: 0.1em;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: 700;
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    text-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
     opacity: 0.8;
     line-height: 1.2em;
     margin-top: 0.25em;
     transition: font-size 500ms ease-out, letter-spacing 500ms ease-out;
-
-    @media only screen and (min-width: 1024px) {
-        font-size: 1.75em;
+    @media only screen and (min-width: 600px) {
+        font-size: 1.25em;
     }
 }
 
 .para {
+    // display: none;
     width: 90%;
     margin-top: 0.5em;
     opacity: 0.8;
-    font-size: 1rem;
+    color: #cdcdcd;
+    font-size: 1em;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
     margin-top: 1em;
     max-width: 580px;
@@ -80,7 +89,7 @@
     align-items: center;
     gap: 1.5em;
     transition: gap 500ms ease-in-out, letter-spacing 500ms ease-in-out;
-    margin-top: 1.5em;
+    margin-top: 2em;
     line-height: 1.5em;
     // & > * {
     //     text-transform: uppercase;
