--- a/styles/Services.module.scss
+++ b/styles/Services.module.scss
@@ -1,8 +1,33 @@
 .services {
     background: #00090f;
+    position: relative;
+    z-index: 1;
     color: #f9f9f9;
     padding: 6.25em 0 7.5em;
     transition: padding 500ms ease-in-out, font-size 500ms ease-in-out;
+    &::before,
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        z-index: -1;
+    }
+    &::before {
+        background: url("/static/services-bg.jpg") no-repeat center;
+        background-size: cover;
+        // filter: saturate(150%) contrast(120%);
+    }
+    &::after {
+        background: radial-gradient(
+                54.76% 54.76% at 50% 45.24%,
+                rgba(0, 0, 0, 0) 32.91%,
+                rgba(0, 9, 15, 0.8) 100%
+            ),
+            hsla(0, 0%, 0%, 0.6);
+    }
 }
 
 .container {
@@ -32,7 +57,7 @@
 .row {
     display: flex;
     flex-direction: column;
-    font-size: 1rem;
+    font-size: 1em;
     flex-grow: 0;
 
     & > * {
@@ -44,18 +69,30 @@
         flex-direction: column;
         // justify-content: center;
         align-items: center;
-        & > * + * {
-            margin-top: 0.5em;
-        }
     }
 
     &Img {
-        width: 60%;
-        max-height: 150px;
-        max-width: 400px;
+        // width: 60%;
+        // max-height: 150px;
+        // max-width: 400px;
+
+        position: relative;
         & img {
-            margin-inline: auto;
-            max-height: inherit;
+            // margin-inline: auto;
+            // max-height: inherit;
+        }
+
+        // glow effect around the img
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 999px;
+            box-shadow: 0 0 16px 2px rgba(255, 255, 255, 0.5),
+                0 0 32px 4px hsla(205, 100%, 45%, 1);
         }
     }
 
@@ -66,9 +103,10 @@
     }
     &Desc {
         font-size: 1em;
-
         opacity: 0.8;
         max-width: 400px;
+        line-height: 1.4;
+        margin-top: 0.5em;
     }
 }
 
@@ -78,14 +116,16 @@
     }
 
     .rowsContainer {
-        gap: 3em 2em;
+        column-gap: 2em;
         align-items: flex-start;
     }
 }
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 1400px) {
+    .services {
+        padding: 12em 0;
+    }
     .rowsContainer {
         flex-wrap: nowrap;
-        gap: 1em;
-        justify-content: space-between;
+        // gap: 4em;
     }
 }
