--- a/styles/_font.scss
+++ b/styles/_font.scss
@@ -79,3 +79,7 @@ $secondaryFont: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI",
     text-transform: uppercase;
     letter-spacing: 0.1em;
 }
+
+%button {
+    @include font($case: uppercase, $letter-spacing: 0.1em);
+}
